[gd_scene load_steps=21 format=3 uid="uid://d4fpm0f51glix"]

[ext_resource type="Script" path="res://Universe.gd" id="1_oc18n"]
[ext_resource type="PackedScene" uid="uid://b0nt4n13a6448" path="res://addons/starlight/Stars.tscn" id="2_pl60u"]
[ext_resource type="PackedScene" uid="uid://c1ml4yvlgnbbv" path="res://data/scenes/planet_gaseous.tscn" id="2_wrv64"]
[ext_resource type="PackedScene" uid="uid://biy37ccrqck53" path="res://data/scenes/planet_ice.tscn" id="3_in6i3"]
[ext_resource type="Script" path="res://TabContainer.gd" id="3_nwjap"]
[ext_resource type="Script" path="res://addons/starlight/StarGenerator.gd" id="3_v2fsg"]
[ext_resource type="PackedScene" uid="uid://dneumird5vcjw" path="res://data/scenes/planet_lava.tscn" id="4_gr8di"]
[ext_resource type="Script" path="res://PlanetInfo.gd" id="4_krhue"]
[ext_resource type="PackedScene" uid="uid://tnvbntvduo2b" path="res://data/scenes/planet_no_atmosphere.tscn" id="5_njrnd"]
[ext_resource type="PackedScene" uid="uid://dbexddi1rwbt4" path="res://data/scenes/planet_sand.tscn" id="6_na4sr"]
[ext_resource type="PackedScene" uid="uid://yo6lqoksa53k" path="res://data/scenes/planet_terrestrial.tscn" id="7_qrnp7"]
[ext_resource type="PackedScene" uid="uid://c1lxtdgeggnej" path="res://data/scenes/star.tscn" id="8_msb5u"]
[ext_resource type="Shader" path="res://universe.gdshader" id="10_mj5fi"]
[ext_resource type="Script" path="res://Player.gd" id="13_0kq3a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iu6it"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2jww8"]
shader = ExtResource("10_mj5fi")
shader_parameter/background_color = Color(0, 0, 0, 0)
shader_parameter/line_color = Color(0, 1, 1, 1)
shader_parameter/line_freq = 9.56
shader_parameter/height = 0.6
shader_parameter/speed = 0.8
shader_parameter/scale = Vector2(2, 16)

[sub_resource type="Theme" id="Theme_6l8gk"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ljxp6"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8lwvg"]

[sub_resource type="Environment" id="Environment_oaqaf"]
background_energy_multiplier = 0.0
ambient_light_color = Color(1, 1, 1, 1)
ambient_light_energy = 3.37

[node name="Universe" type="Node"]
script = ExtResource("1_oc18n")

[node name="Planets" type="Node" parent="."]

[node name="Views" type="Node" parent="."]

[node name="PlanetGaseous" parent="Views" instance=ExtResource("2_wrv64")]
transform = Transform3D(-0.784623, 0, -0.619972, 0, 1, 0, 0.619972, 0, -0.784623, 0, 0, 0)
visible = false

[node name="PlanetIce" parent="Views" instance=ExtResource("3_in6i3")]
transform = Transform3D(-0.995645, 0, 0.0932173, 0, 1, 0, -0.0932173, 0, -0.995645, 0, 0, 0)
visible = false

[node name="PlanetLava" parent="Views" instance=ExtResource("4_gr8di")]
transform = Transform3D(-0.995645, 0, 0.0932173, 0, 1, 0, -0.0932173, 0, -0.995645, 0, 0, 0)
visible = false

[node name="PlanetNoAtmosphere" parent="Views" instance=ExtResource("5_njrnd")]
transform = Transform3D(1, 0, 4.46638e-06, 0, 1, 0, -4.46638e-06, 0, 1, 0, 0, 0)
visible = false

[node name="PlanetSand" parent="Views" instance=ExtResource("6_na4sr")]
transform = Transform3D(-0.995645, 0, 0.0932173, 0, 1, 0, -0.0932173, 0, -0.995645, 0, 0, 0)
visible = false

[node name="PlanetTerrestrial" parent="Views" instance=ExtResource("7_qrnp7")]
transform = Transform3D(-0.995645, 0, 0.0932173, 0, 1, 0, -0.0932173, 0, -0.995645, 0, 0, 0)
visible = false

[node name="Star" parent="Views" instance=ExtResource("8_msb5u")]
transform = Transform3D(-0.644339, 0, -0.764739, 0, 1, 0, 0.764739, 0, -0.644339, 0, 0, 0)
visible = false

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -202.0
offset_right = 203.0
offset_bottom = 77.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iu6it")

[node name="Label" type="Label" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -13.0
offset_right = 70.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Celestial Emulator - Ian"

[node name="TabContainer" type="TabContainer" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_2jww8")
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -473.0
offset_bottom = 545.0
grow_horizontal = 0
theme = SubResource("Theme_6l8gk")
tab_alignment = 1
clip_tabs = false
drag_to_rearrange_enabled = true
script = ExtResource("3_nwjap")

[node name="Settings" type="PanelContainer" parent="CanvasLayer"]
offset_right = 180.0
offset_bottom = 217.0
theme_override_styles/panel = SubResource("StyleBoxFlat_ljxp6")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Settings"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
text = "View"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
item_count = 2
selected = 0
popup/item_0/text = "Planet View"
popup/item_0/id = 0
popup/item_1/text = "Orbit View"
popup/item_1/id = 1

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Settings/VBoxContainer"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_8lwvg")

[node name="Label2" type="Label" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="CanvasLayer/Settings/VBoxContainer"]
layout_mode = 2
text = "Stars"

[node name="PlanetInfo" type="Node" parent="."]
script = ExtResource("4_krhue")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_oaqaf")

[node name="Stars" parent="." instance=ExtResource("2_pl60u")]
transform = Transform3D(0.999943, 0, -0.0106621, 0, 1, 0, 0.0106621, 0, 0.999943, 0, 100, 0)
script = ExtResource("3_v2fsg")
size = 10000.0
star_count = 100000
rng_seed = 1234
generate_at_origin = true
shader_params/emission_energy = 5e+08
shader_params/clamp_output = true

[node name="Label3D" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.915485, 0)
billboard = 1
fixed_size = true
text = "object"
font_size = 20

[node name="OmniLight3D" type="OmniLight3D" parent="."]
light_energy = 16.0
omni_range = 39.474

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.948661, 0.316295, 0, -0.316295, 0.948661, 0, 1.53129, 3.54855)
script = ExtResource("13_0kq3a")

[node name="OmniLight3D" type="OmniLight3D" parent="Camera3D"]
light_energy = 4.839
omni_range = 39.474

[connection signal="item_selected" from="CanvasLayer/Settings/VBoxContainer/OptionButton" to="." method="_on_option_button_item_selected"]
